Fixed head trajectory controller command

--- a/hrl_manipulation_task/params/anomaly_detection.yaml
+++ b/hrl_manipulation_task/params/anomaly_detection.yaml
@@ -5,7 +5,7 @@ hrl_manipulation_task:
   arm: l
 
   # For auditory perception
-  head_audio_frame: head_mount_link
+  head_audio_frame: head_mount_kinect_ir_link
 
   # For kinematics perception # never used..
   #end_effector_frame: l_gripper_spoon_frame
