--- a/hrl_anomaly_detection/params/anomaly_detection_scooping.yaml
+++ b/hrl_anomaly_detection/params/anomaly_detection_scooping.yaml
@@ -6,6 +6,6 @@ rf_radius: 0.15
 sgd_intercept: 0.15
 sgd_intercept_max: 3.0
 sgd_intercept_min: -3.0
-sgd_w_positive: 0.0001
+sgd_w_positive: 0.08222426499470713
 states: 10
 svm_w_positive: 20.0
