pushing last changes from hydro (i hope)

--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,9 @@
 ###################################
 *.wav
 *.pkl
+*.dat
+*.npy
+*.zip
 
 # ROS specific files and folders #
 ##################################
