--- a/hrl_anomaly_detection/params/anomaly_detection_feeding.yaml
+++ b/hrl_anomaly_detection/params/anomaly_detection_feeding.yaml
@@ -2,7 +2,7 @@ cov_mult: 10.0
 downSampleSize: 200
 feature_list: [unimodal_ftForce, crossmodal_targetEEDist]
 progress_ths_mult: -1.625
-progress_time_cluster_ths_mult: -0.7750000000000004
+mbkmean_ths_mult: -1.5.
 rf_center: kinEEPos
 rf_radius: 0.15
 sgd_intercept: 0.15
