real time base selection should be up and running maybe

--- a/hrl_base_selection/CMakeLists.txt
+++ b/hrl_base_selection/CMakeLists.txt
@@ -9,10 +9,12 @@ add_service_files(
     DIRECTORY srv  
     FILES BaseMove.srv 
     FILES BaseMove_multi.srv
+    FILES BaseMove_realtime.srv
+    FILES Base_Read_Model.srv
 )
 
 generate_messages(
-    DEPENDENCIES geometry_msgs std_msgs
+    DEPENDENCIES geometry_msgs std_msgs sensor_msgs
 )
 
 catkin_package(
