updated cmakelists service file names to match current file names

--- a/hrl_base_selection/CMakeLists.txt
+++ b/hrl_base_selection/CMakeLists.txt
@@ -8,9 +8,8 @@ catkin_python_setup()
 add_service_files(
     DIRECTORY srv  
     FILES BaseMove.srv 
-    FILES BaseMove_multi.srv
-    FILES BaseMove_realtime.srv
-    FILES Base_Read_Model.srv
+    FILES realtimeBaseMove.srv
+    FILES setBaseModel.srv
 )
 
 generate_messages(
