--- a/assistive_teleop/package.xml
+++ b/assistive_teleop/package.xml
@@ -24,6 +24,7 @@
   <build_depend>actionlib_msgs</build_depend>
   <build_depend>tf</build_depend>
   <build_depend>std_msgs</build_depend>
+  <build_depend>sensor_msgs</build_depend>
   <build_depend>geometry_msgs</build_depend>
   <build_depend>trajectory_msgs</build_depend>
   <build_depend>moveit_msgs</build_depend>
@@ -45,6 +46,7 @@
   <run_depend>actionlib_msgs</run_depend>
   <run_depend>tf</run_depend>
   <run_depend>std_msgs</run_depend>
+  <run_depend>sensor_msgs</run_depend>
   <run_depend>geometry_msgs</run_depend>
   <run_depend>trajectory_msgs</run_depend>
   <run_depend>moveit_msgs</run_depend>
