adding msg def for datalogging, updated file to module pattern

--- a/assistive_teleop/CMakeLists.txt
+++ b/assistive_teleop/CMakeLists.txt
@@ -14,6 +14,12 @@ add_action_files(
 )
 
 
+add_message_files(
+  DIRECTORY msg
+  FILES 
+  InterfaceLog.msg
+)
+
 add_service_files(
   DIRECTORY srv
   FILES 
