preprocessing test for anomaly isolation

--- a/hrl_manipulation_task/params/pr2_config_params_l.yaml
+++ b/hrl_manipulation_task/params/pr2_config_params_l.yaml
@@ -18,6 +18,8 @@ haptic_mpc:
     # Inposition parameter for action and log
     ee_motion_threshold: 0.015
     ee_orient_motion_threshold: 0.05
+    #ee_motion_threshold: 0.000000015
+    #ee_orient_motion_threshold: 0.00000005
     jts_motion_threshold: 0.0001
 
     # Joint limits.
