--- a/hrl_assistive/package.xml
+++ b/hrl_assistive/package.xml
@@ -23,7 +23,8 @@
   <run_depend>hrl_sound_localization</run_depend>
   <run_depend>hrl_base_selection</run_depend>
   <run_depend>hrl_realsense_camera</run_depend>
-
+  <run_depend>hrl_anomaly_detection</run_depend>
+  <run_depend>hrl_anomaly_isolation</run_depend>
   <export>
     <metapackage/>
   </export>
