test param update

--- a/hrl_execution_monitor/CMakeLists.txt
+++ b/hrl_execution_monitor/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 2.8.3)
-project(hrl_anomaly_detection)
+project(hrl_execution_monitor)
 find_package(catkin REQUIRED COMPONENTS message_generation std_msgs)
 
 catkin_python_setup()
