--- a/hrl_execution_monitor/params/anomaly_detection_feeding.yaml
+++ b/hrl_execution_monitor/params/anomaly_detection_feeding.yaml
@@ -1,13 +1,4 @@
 
 
-cov_mult: 10.0
-downSampleSize: 200
-feature_list: [unimodal_ftForce, crossmodal_targetEEDist]
 progress_ths_mult: -1.625
-mbkmean_ths_mult: -1.5.
-rf_center: kinEEPos
-rf_radius: 0.15
-sgd_intercept: 0.15
-sgd_w_positive: 0.9952623149688797
-states: 10
-svm_w_positive: 20.0
+hmmgp_ths_mult: -22.0
