--- a/hrl_execution_monitor/package.xml
+++ b/hrl_execution_monitor/package.xml
@@ -26,6 +26,7 @@
   <run_depend>geometry_msgs</run_depend>
   <run_depend>hrl_srvs</run_depend>
   <run_depend>sound_play</run_depend>
+  <run_depend>hrl_anomaly_detection</run_depend>
 
 </package>
 
