--- a/hrl_execution_monitor/params/anomaly_detection_feeding.yaml
+++ b/hrl_execution_monitor/params/anomaly_detection_feeding.yaml
@@ -1,1 +1,2 @@
-{hmmgp0_ths_mult: -7.0, hmmgp1_ths_mult: -7.0, nDetector: 2, progress_ths_mult: -1.625}
+{hmmgp0_ths_mult: -20.809573444801934, hmmgp1_ths_mult: -20.809573444801934, nDetector: 2,
+  progress_ths_mult: -1.625}
