--- a/hrl_execution_monitor/params/anomaly_detection_feeding.yaml
+++ b/hrl_execution_monitor/params/anomaly_detection_feeding.yaml
@@ -1,2 +1,2 @@
 {hmmgp0_ths_mult: -15.809573444801934, hmmgp1_ths_mult: -15.809573444801934, nDetector: 2,
-  progress0_ths_mult: -2.0, progress1_ths_mult: -50.0, progress_ths_mult: -1.625}
+  progress0_ths_mult: -2.0, progress1_ths_mult: -51.622776601683796, progress_ths_mult: -1.625}
