--- a/hrl_execution_monitor/params/anomaly_detection_feeding.yaml
+++ b/hrl_execution_monitor/params/anomaly_detection_feeding.yaml
@@ -1,2 +1,3 @@
 {hmmgp0_ths_mult: -15.809573444801934, hmmgp1_ths_mult: -15.809573444801934, nDetector: 2,
-  progress0_ths_mult: -3.0, progress1_ths_mult: -4.5, progress_ths_mult: -1.625}
+  progress0_ths_mult: -6.309573444801933, progress1_ths_mult: -6.309573444801933,
+  progress_ths_mult: -1.625}
