--- a/hrl_execution_monitor/params/anomaly_detection_feeding.yaml
+++ b/hrl_execution_monitor/params/anomaly_detection_feeding.yaml
@@ -1,3 +1,2 @@
 {hmmgp0_ths_mult: -15.809573444801934, hmmgp1_ths_mult: -15.809573444801934, nDetector: 2,
-  progress0_ths_mult: -6., progress1_ths_mult: -7.15,
-  progress_ths_mult: -1.625}
+  progress0_ths_mult: -7.44, progress1_ths_mult: -7.44, progress_ths_mult: -1.625}
